--- a/spik/build.gradle
+++ b/spik/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.0'
 
     compile 'org.roboguice:roboguice:3.0.1'
+    provided 'org.roboguice:roboblender:3.0.1'
     compile 'org.slf4j:slf4j-api:1.7.12'
     compile 'org.slf4j:slf4j-android:1.7.12'
 
