--- a/spik/src/main/AndroidManifest.xml
+++ b/spik/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat" >
+        <meta-data android:name="roboguice.modules"
+                   android:value="com.funtowiczmo.spik.modules.DefaultAndroidModule" />
         <activity
             android:name=".ConnectionActivity"
             android:label="@string/app_name" >
