--- a/spik/src/main/AndroidManifest.xml
+++ b/spik/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat" >
         <meta-data android:name="roboguice.modules"
-                   android:value="com.funtowiczmo.spik.modules.DefaultAndroidModule" />
+                   android:value="com.funtowiczmo.spik.context.modules.DefaultAndroidModule" />
         <activity
             android:name=".ConnectionActivity"
             android:label="@string/app_name" >
